# mrd2

./: .gitignore  display.ipynb  environment.yml  justfile
.devcontainer/: Dockerfile  devcontainer.json
cpp/mrd/: CMakeLists.txt  ismrmrd_to_mrd.cc  mrd_image_stream_to_png.cc  mrd_phantom.cc  mrd_stream_recon.cc  mrd_to_ismrmrd.cc
model/: mrd_acquisition.yml  mrd_header.yml  mrd_image.yml  mrd_protocol.yml
utils/: xsd-to-yardl.py
